fixed broken css link

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,23 +1,24 @@
 @import url("https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Montserrat:wght@500;700&display=swap");
 :root {
-  $--breakpoint-sm: 375px;
-  $--breakpoint-lg: 1440px;
+  --clr-primary-100: hsl(30, 38%, 92%);
+  --clr-primary-500: hsl(158, 36%, 37%);
+  --clr-primary-800: hsl(158, 39%, 18%);
 
-  $--clr-primary-100: hsl(30, 38%, 92%);
-  $--clr-primary-500: hsl(158, 36%, 37%);
+  --clr-neutral-100: hsl(0, 0%, 100%);
+  --clr-neutral-400: hsl(228, 12%, 48%);
+  --clr-neutral-900: hsl(212, 21%, 14%);
 
-  $--clr-neutral-100: hsl(0, 0%, 100%);
-  $--clr-neutral-400: hsl(228, 12%, 48%);
-  $--clr-neutral-900: hsl(212, 21%, 14%);
+  --ff-primary: "Montserrat", serif;
+  --ff-secondary: "Fraunces", sans-serif;
+  --ff-title: var(--ff-secondary);
+  --ff-price: var(--ff-secondary);
+  --fs-small: 0.875rem;
+  --fs-lg: 2rem;
 
-  $--ff-heading: "Fraunces", serif;
-  $--ff-price: "Fraunces", serif;
-  $--ff-title: "Montserrat", sans-serif;
-  $--ff-descc: "Montserrat", sans-serif;
-  $--fs-small: 14px;
+  --fw-semi-bold: 500;
+  --fw-bold: 700;
 
-  $--fw-semi-bold: 500;
-  $--fw-bold: 700;
+  --spacing: 1em;
 }
 
 /**Box sizing rules
@@ -38,19 +39,24 @@ ol[role="list"] {
   list-style: none;
 }
 
-/* Set core root defaults */
-html:focus-within {
-  scroll-behavior: smooth;
-}
-
 /* Set core root and core defaults */
 html,
 body {
   height: 100%;
 }
 
+/* Set core root defaults */
+html:focus-within {
+  scroll-behavior: smooth;
+}
+
 /* Set core body defaults */
 body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--clr-primary-100);
+  font-family: var(--ff-primary);
   text-rendering: optimizeSpeed;
   line-height: 1.5;
 }
@@ -66,6 +72,88 @@ picture,
 svg {
   max-width: 100%;
   display: block;
+}
+
+.card {
+  width: 21.4375em;
+  border-radius: calc(var(--spacing) / 2);
+  background-color: var(--clr-neutral-100);
+  overflow: hidden;
+
+  &__content {
+    padding: calc(var(--spacing) * 1.5);
+    display: flex;
+    flex-direction: column;
+    gap: calc(var(--spacing) / 1.333333333);
+  }
+
+  &__type {
+    color: var(--clr-neutral-400);
+    text-transform: uppercase;
+    letter-spacing: 0.5ch;
+    font-size: var(--fs-small);
+    font-weight: var(--fw-semi-bold);
+  }
+
+  &__title {
+    font-family: var(--ff-title);
+    font-size: var(--fs-lg);
+    line-height: 1.2;
+  }
+
+  &__desc {
+    color: var(--clr-neutral-400);
+    font-size: var(--fs-small);
+  }
+
+  &__price {
+    display: flex;
+    align-items: center;
+    gap: var(--spacing);
+
+    &--current {
+      font-family: var(--ff-price);
+      font-size: var(--fs-lg);
+      color: var(--clr-primary-500);
+    }
+
+    &--discount {
+      font-size: var(--fs-small);
+      text-decoration: line-through;
+      color: var(--clr-neutral-400);
+    }
+  }
+
+  &__btn {
+    cursor: pointer;
+    padding: calc(var(--spacing) / 1.333333333);
+    border-radius: calc(var(--spacing) / 2);
+    background-color: var(--clr-primary-500);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: calc(var(--spacing) / 2);
+    text-decoration: none;
+    color: var(--clr-neutral-100);
+
+    &:hover, &:focus-within{
+      background-color: var(--clr-primary-800);
+    }
+  }
+
+}
+
+@media (min-width: 720px) {
+  .card {
+    width: 600px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+
+    &__content{
+      padding: calc(var(--spacing) * 2);
+      gap: var(--spacing);
+    }
+  }
 }
 
 /* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
